# my-first-python-project

./: README.md  app.py  pyproject.toml
backups/vsrx1/: config.txt
backups/vsrx2/: config.txt
